[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.test555"
version = "0.0.1"
description = "A docassemble extension."
readme = "README.md"
authors = [
    { name = "Jonathan Pyle", email = "jhpyle@gmail.com" },
]
dependencies = [
    "aiohttp-retry>=2.9.1",
    "airtable-python-wrapper>=0.15.3",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
